@@ -2,9 +2,9 @@
 
 <!-- Start of Common Patches -->
 
-<!ENTITY bash-fixes-patch "bash-&bash-version;-upstream_fixes-1.patch">
-<!ENTITY bash-fixes-patch-md5 "749b4b520708300b64f8166ba2b1b4a0">
-<!ENTITY bash-fixes-patch-size "14 KB">
+<!ENTITY bash-fixes-patch "bash-&bash-version;-upstream_fixes-2.patch">
+<!ENTITY bash-fixes-patch-md5 "bfe39ee2c6cae6e01f5f7873e7a1949f">
+<!ENTITY bash-fixes-patch-size "28 KB">
 
 <!ENTITY binutils-lto-patch "binutils-&binutils-version;-load_gcc_lto_plugin_by_default-1.patch">
 <!ENTITY binutils-lto-patch-md5 "48e4e96a60bfed41804aaecf4944f5d9">
@@ -51,13 +51,13 @@
 <!ENTITY kbd-backspace-patch-md5 "f75cca16a38da6caa7d52151f7136895">
 <!ENTITY kbd-backspace-patch-size "12 KB">
 
-<!ENTITY mpfr-fixes-patch "mpfr-&mpfr-version;-upstream_fixes-1.patch">
-<!ENTITY mpfr-fixes-patch-md5 "aaf52416b309dd0b8c5eb92ae9c210c1">
-<!ENTITY mpfr-fixes-patch-size "43 KB">
+<!ENTITY mpfr-fixes-patch "mpfr-&mpfr-version;-upstream_fixes-2.patch">
+<!ENTITY mpfr-fixes-patch-md5 "2b2aa4371a4e848411639356fd82becf">
+<!ENTITY mpfr-fixes-patch-size "40 KB">
 
-<!ENTITY readline-fixes-patch "readline-6.3-upstream_fixes-1.patch">
-<!ENTITY readline-fixes-patch-md5 "bbee7fad08474328b807e6828c26a961">
-<!ENTITY readline-fixes-patch-size "3.1 KB">
+<!ENTITY readline-fixes-patch "readline-6.3-upstream_fixes-2.patch">
+<!ENTITY readline-fixes-patch-md5 "97f74f1c3c83008f268b32d36e9fd376">
+<!ENTITY readline-fixes-patch-size "4 KB">
 
 <!ENTITY sysvinit-consolidated-patch "sysvinit-&sysvinit-version;-consolidated-1.patch">
 <!ENTITY sysvinit-consolidated-patch-md5 "0b7b5ea568a878fdcc4057b2bf36e5cb">
